Add endpoint for eureka connection.
