# swagger/swagger.yaml
@@ -32,6 +32,26 @@ paths:
         "404":
           description: The application is not running.
       x-openapi-router-controller: controllers.main_controller
+  /eureka:
+    get:
+      tags:
+        - Main
+      operationId: eureka
+      responses:
+        "200":
+          description: Tries to connect to eureka server
+          content:
+            application/json:
+              schema:
+                type: string
+                x-content-type: application/json
+        "500":
+          description: Unable to connect to eureka.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+      x-openapi-router-controller: controllers.main_controller
   /actuator:
     get:
       tags:
